Enable JitPack Dependencies Handler

--- a/pom.xml
+++ b/pom.xml
@@ -46,16 +46,29 @@
             <version>1.0.1</version>
         </dependency> -->
         <!-- https://mvnrepository.com/artifact/edu.cmu.lti/ws4j -->
-		<dependency>
+		
+		<!-- <dependency>
 		    <groupId>edu.cmu.lti</groupId>
 		    <artifactId>ws4j</artifactId>
 		    <version>1.0.1</version>
+		</dependency> -->
+		<dependency>
+		    <groupId>com.github.cloudhubs</groupId>
+		    <artifactId>WS4J-ex</artifactId>
+		    <version>expansion-base-SNAPSHOT</version>
 		</dependency>
-        <dependency>
+		
+       <!--  <dependency>
             <groupId>edu.baylor.ecs.cloudhubs</groupId>
             <artifactId>prophet-dto</artifactId>
             <version>0.0.8</version>
-        </dependency>
+        </dependency> -->
+        
+        <dependency>
+	    	<groupId>com.github.cloudhubs</groupId>
+	    	<artifactId>prophet-dto</artifactId>
+	    	<version>expansion-base-SNAPSHOT</version>
+		</dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -64,6 +77,13 @@
         </dependency>
 
     </dependencies>
+    
+    <repositories>
+		<repository>
+		    <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 
     <build>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
