--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>com.github.cloudhubs</groupId>
 			<artifactId>prophet-dto</artifactId>
-			<version>modernize-prophet-dto-SNAPSHOT</version>
+			<version>expansion-base-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
